--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on:
@@ -11,61 +8,47 @@ on:
 
 jobs:
   build:
+    runs-on: ubuntu-latest
 
     env:
-      BUILD_FOLDER: ./automation-fop-help
+      BUILD_FOLDER: automation-fop-help
       HEADLESS: true
-
-    runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [22.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - name: install packages
-      run: npm ci
-      working-directory: ${{ env.BUILD_FOLDER }}
-    - name: Install playwright browsers
-      run: npx playwright install --with-deps
-      working-directory: ${{ env.BUILD_FOLDER }}
-    - name: run playwright tests
-      run: npm run test
-      working-directory: ${{ env.BUILD_FOLDER }}
-    - name: Test Summary
-      uses: test-summary/action@v2
-      with:
-        paths: "${{ env.BUILD_FOLDER }}/test-results/junit.xml"
-      if: always()
-    - name: upload playwright report
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: playwright-report
-        path: ${{ env.BUILD_FOLDER }}/playwright-report
-        retention-days: 30
-    - name: upload playwright test results
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: playwright-test results
-        path: ${{ env.BUILD_FOLDER }}/test-results
-        retention-days: 30
-    - name: build allure report
-      run: npx allure generate allure-results --clean --single-file -o allure-report
-      working-directory: ${{ env.BUILD_FOLDER }}
-      if: always()
-    - name: upload playwright allure report
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: playwright-allure-report
-        path: ${{ env.BUILD_FOLDER }}/allure-report
-        retention-days: 30
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+        working-directory: ${{ env.BUILD_FOLDER }}
+
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
+        working-directory: ${{ env.BUILD_FOLDER }}
+
+      - name: Run all tests
+        run: npm run test:all
+        working-directory: ${{ env.BUILD_FOLDER }}
+
+      - name: Build Allure report
+        run: npx allure generate allure-results --clean --single-file -o allure-report
+        working-directory: ${{ env.BUILD_FOLDER }}
+        if: always()
+
+      - name: Upload Allure report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: allure-html-report
+          path: ${{ env.BUILD_FOLDER }}/allure-report
+          retention-days: 30
