--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,9 +45,11 @@ jobs:
         run: npx allure generate allure-results --clean --single-file -o allure-report
         working-directory: ${{ env.BUILD_FOLDER }}
         env:
-          FOR_HELP_API_BASE_URL: ${{ secrets.FOR_HELP_API_BASE_URL }}
-          FH_USER_NAME: ${{ secrets.FH_USER_NAME }}
-          FH_PASSWORD: ${{ secrets.FH_PASSWORD }}
+          BUILD_FOLDER: automation-fop-help
+          HEADLESS: true
+          FOR_HELP_API_BASE_URL: ${{secrets.FOR_HELP_API_BASE_URL}}
+          FH_USER_NAME: ${{secrets.FH_USER_NAME}}
+          FH_PASSWORD: ${{secrets.FH_PASSWORD}}
         if: always()
 
       - name: Upload Allure report
