--- a/automation-fop-help/package.json
+++ b/automation-fop-help/package.json
@@ -26,6 +26,7 @@
     "@vitest/ui": "^3.0.6",
     "allure-commandline": "^2.33.0",
     "allure-playwright": "^3.2.1",
+    "allure-vitest": "^3.2.1",
     "chai": "^5.2.0",
     "eslint": "^9.19.0",
     "eslint-plugin-prettier": "^5.2.3",
