--- a/automation-fop-help/package.json
+++ b/automation-fop-help/package.json
@@ -6,10 +6,15 @@
   "scripts": {
     "lint": "eslint src/",
     "lint:fix": "npm run lint -- --fix",
-    "test": "npm run test:api",
-    "test:api": "npm run lint && vitest run",
+    "test": "npm run test:api && npm run test:api-integration && npm run test:ui",
+    "test:api": "npm run lint && vitest run --config vitest.config.api.ts",
+    "test:api-integration": "vitest run --config vitest.config.api-integration.ts",
     "test:ui": "playwright test",
-    "test:all": "npm run test:api && npm run test:ui",
+    "test:all": "npm run test:api && npm run test:api-integration && npm run test:ui",
+    "test:api:ci": "vitest run --config vitest.config.api.ts",
+    "test:api-integration:ci": "vitest run --config vitest.config.api-integration.ts",
+    "test:ui:ci": "playwright test",
+    "test:all:ci": "npm run test:api:ci && npm run test:api-integration:ci && npm run test:ui:ci",
     "build": "npm run lint && tsc --build"
   },
   "author": "",
