Added run in CI/CD

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,9 @@ jobs:
     env:
       BUILD_FOLDER: automation-fop-help
       HEADLESS: true
+      FOR_HELP_API_BASE_URL: ${{ secrets.FOR_HELP_API_BASE_URL }}
+      FH_USER_NAME: ${{ secrets.FH_USER_NAME }}
+      FH_PASSWORD: ${{ secrets.FH_PASSWORD }}
 
     strategy:
       matrix:
@@ -36,15 +39,21 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
         working-directory: ${{ env.BUILD_FOLDER }}
-      
-      - name: Run tests without lint
-        run: npm run test:all:ci
+        
+      - name: Run UI tests
+        run: npm run test:ui:ci
         working-directory: ${{ env.BUILD_FOLDER }}
-        env:
-          FOR_HELP_API_BASE_URL: ${{ secrets.FOR_HELP_API_BASE_URL }}
-          FH_USER_NAME: ${{ secrets.FH_USER_NAME }}
-          FH_PASSWORD: ${{ secrets.FH_PASSWORD }}
-        if: always()  
+        if: always()   
+        
+      - name: Run API tests
+        run: npm run test:api:ci
+        working-directory: ${{ env.BUILD_FOLDER }}
+        if: always()    
+      
+      - name: Run API Integration tests
+        run: npm run test:api-integration:ci
+        working-directory: ${{ env.BUILD_FOLDER }}
+        if: always()
 
       - name: Build Allure report
         run: npx allure generate allure-results --clean --single-file -o allure-report
