--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,7 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main", "final-project" ]
-  pull_request:
-    branches: [ "main" ]
+    branches: ["final-project" ]
 
 jobs:
   build:
