--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,10 +53,20 @@ jobs:
         working-directory: ${{ env.BUILD_FOLDER }}
         if: always()
 
-      - name: Build Allure report
+      - name: Build Allure UI report
         run: npx allure generate allure-results --clean --single-file -o allure-report
         working-directory: ${{ env.BUILD_FOLDER }}
         if: always()
+
+      - name: Build Allure API report
+        run: npx allure generate allure-results-api --clean --single-file -o allure-report
+        working-directory: ${{ env.BUILD_FOLDER }}
+        if: always() 
+
+      - name: Build Allure API Integration report
+        run: npx allure generate allure-results-api-integration --clean --single-file -o allure-report
+        working-directory: ${{ env.BUILD_FOLDER }}
+        if: always()  
 
       - name: Upload Allure report
         uses: actions/upload-artifact@v4
